# liberalismo.info

./: .gitignore  404.html  AGENTS.md  CNAME  Gemfile  README.md  _config.yml  aboutme.md  calendar.md  colabore.md  index.html  index0.html
_layouts/: calendar.html
_posts/: 2015-02-28-test-markdown.md
css/: main.css
docs/: MARXISTS_STRUCTURE_COMPARISON.md  SPEC.md  classical-liberal-canon.md  classical-liberal-library-seed.md
test/: all.sh  library_fulltext.sh
tools/book_import/: .gitignore  README.md  pyproject.toml
tools/book_import/scripts/: evaluate_public_domain.py
tools/book_import/src/book_import/: __init__.py  cli.py  extractors.py  pipeline.py  quality.py
tools/book_import/tests/: test_extractors.py  test_pipeline.py  test_quality.py
